[gd_scene load_steps=56 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://art/HUD/menu/fontpack/BPdotsUnicaseSquareBold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://art/HUD/menu/TITLE.png" type="Texture" id=3]
[ext_resource path="res://art/Actions/Idle/IdleBoy_4.png" type="Texture" id=4]
[ext_resource path="res://art/effect spritesheets/magic/18_midnight_spritesheet.png" type="Texture" id=5]
[ext_resource path="res://art/HUD/Image.png" type="Texture" id=6]
[ext_resource path="res://art/Actions/Idle/IdleBoy_1.png" type="Texture" id=7]
[ext_resource path="res://art/Actions/Idle/IdleBoy_2.png" type="Texture" id=8]
[ext_resource path="res://art/Actions/Idle/IdleBoy_8.png" type="Texture" id=9]
[ext_resource path="res://art/Actions/Idle/IdleBoy_3.png" type="Texture" id=10]
[ext_resource path="res://art/Actions/Idle/IdleBoy_7.png" type="Texture" id=11]
[ext_resource path="res://art/Actions/Idle/IdleBoy_10.png" type="Texture" id=12]
[ext_resource path="res://art/Actions/Idle/IdleBoy_6.png" type="Texture" id=13]
[ext_resource path="res://art/Actions/Air/AirBoy_4.png" type="Texture" id=14]
[ext_resource path="res://art/Actions/Idle/IdleBoy_5.png" type="Texture" id=15]
[ext_resource path="res://art/Actions/Idle/IdleBoy_9.png" type="Texture" id=16]
[ext_resource path="res://art/Actions/Air/AirBoy_8.png" type="Texture" id=17]
[ext_resource path="res://art/Actions/Air/AirBoy_9.png" type="Texture" id=18]
[ext_resource path="res://art/Actions/Air/AirBoy_2.png" type="Texture" id=19]
[ext_resource path="res://art/Actions/Air/AirBoy_1.png" type="Texture" id=20]
[ext_resource path="res://art/Actions/Air/AirBoy_6.png" type="Texture" id=21]
[ext_resource path="res://art/Actions/Air/AirBoy_3.png" type="Texture" id=22]
[ext_resource path="res://art/Actions/Air/AirBoy_5.png" type="Texture" id=23]
[ext_resource path="res://art/Actions/Air/AirBoy_7.png" type="Texture" id=24]
[ext_resource path="res://Attacks_Abilities/Dash/GhostShader.tres" type="Shader" id=25]
[ext_resource path="res://sounds/main theme/beatsforboy.mp3" type="AudioStream" id=26]
[ext_resource path="res://art/HUD/menu/SLIDERKNOB.png" type="Texture" id=27]
[ext_resource path="res://art/HUD/menu/fontpack/slider.png" type="Texture" id=28]

[sub_resource type="Animation" id=15]
resource_name = "animation"
length = 5.55
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("animation:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2, 5.3, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55 ]
}

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.670588, 0.670588, 0.670588, 1 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Button/colors/font_color = Color( 0.937255, 0.913725, 0.913725, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.0235294, 0.568627, 0.341176, 1 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_pressed = Color( 0, 1, 0.6, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 3 )
Button/styles/focus = SubResource( 20 )
Button/styles/hover = SubResource( 13 )
Button/styles/normal = SubResource( 10 )
Button/styles/pressed = SubResource( 21 )

[sub_resource type="ShaderMaterial" id=16]
shader = ExtResource( 25 )
shader_param/whiten = false
shader_param/mix_weight = 1.0

[sub_resource type="Animation" id=17]
resource_name = "Air"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.11, 0.21, 0.31, 0.41, 0.51, 0.61, 0.71, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 14 ), ExtResource( 23 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 17 ), ExtResource( 18 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 16 ), ExtResource( 12 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=19]
resource_name = "Run"
length = 0.7

[sub_resource type="Animation" id=23]
resource_name = "Audio"
length = 165.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="StyleBoxTexture" id=34]
texture = ExtResource( 28 )
region_rect = Rect2( 0, 0, 90, 20 )
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id=35]

[sub_resource type="StyleBoxTexture" id=36]

[sub_resource type="DynamicFont" id=25]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=26]
default_font = SubResource( 25 )

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.670588, 0.670588, 0.670588, 1 )

[sub_resource type="StyleBoxEmpty" id=30]

[sub_resource type="StyleBoxEmpty" id=31]

[sub_resource type="DynamicFont" id=32]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=33]
default_font = SubResource( 32 )
Button/colors/font_color_focus = Color( 0.0235294, 0.568627, 0.341176, 1 )
Button/colors/font_color_pressed = Color( 0, 1, 0.6, 1 )
Button/styles/disabled = SubResource( 27 )
Button/styles/focus = SubResource( 28 )
Button/styles/hover = SubResource( 29 )
Button/styles/normal = SubResource( 30 )
Button/styles/pressed = SubResource( 31 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 808, 449 )
scale = Vector2( 2.69173, 2.62083 )
texture = ExtResource( 6 )

[node name="animation" type="Sprite" parent="."]
modulate = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
position = Vector2( 1351, 625 )
scale = Vector2( 6.22437, 5.19 )
texture = ExtResource( 5 )
hframes = 8
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/animation = SubResource( 15 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.445556
anchor_right = 1.0
anchor_bottom = 0.554444
margin_left = 696.0
margin_top = 99.0
margin_right = -732.0
margin_bottom = 225.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 172.0
margin_bottom = 30.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 172.0
margin_bottom = 64.0
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 172.0
margin_bottom = 98.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[node name="Sprites" type="Node2D" parent="."]

[node name="PlayerSprite" type="Sprite" parent="Sprites"]
modulate = Color( 0.576471, 0.658824, 0.666667, 1 )
material = SubResource( 16 )
position = Vector2( 119, 646 )
scale = Vector2( 5.82609, 6.52083 )
texture = ExtResource( 18 )

[node name="PlayerAnimations" type="AnimationPlayer" parent="Sprites"]
root_node = NodePath("../..")
anims/Air = SubResource( 17 )
anims/Idle = SubResource( 18 )
anims/RESET = SubResource( 22 )
anims/Run = SubResource( 19 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )

[node name="FadeInAudio" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Audio = SubResource( 23 )
anims/RESET = SubResource( 24 )

[node name="titlesprites" type="Node2D" parent="."]

[node name="title" type="Sprite" parent="titlesprites"]
position = Vector2( 423, 275 )
scale = Vector2( 2.535, 2.48 )
texture = ExtResource( 3 )
offset = Vector2( 140, 0 )

[node name="title2" type="Sprite" parent="titlesprites"]
position = Vector2( 423, 275 )
scale = Vector2( 2.535, 2.48 )
texture = ExtResource( 3 )
offset = Vector2( 143, 0 )

[node name="title3" type="Sprite" parent="titlesprites"]
position = Vector2( 423, 275 )
scale = Vector2( 2.535, 2.48 )
texture = ExtResource( 3 )
offset = Vector2( 140, 0 )

[node name="title4" type="Sprite" parent="titlesprites"]
position = Vector2( 423, 275 )
scale = Vector2( 2.535, 2.48 )
texture = ExtResource( 3 )
offset = Vector2( 140, 0 )

[node name="options" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSlider" type="HSlider" parent="options"]
margin_left = 800.0
margin_top = 393.0
margin_right = 960.0
margin_bottom = 460.0
rect_scale = Vector2( 2, 2 )
focus_neighbour_top = NodePath("../goback")
focus_neighbour_bottom = NodePath("../goback")
custom_icons/grabber_highlight = ExtResource( 27 )
custom_icons/grabber = ExtResource( 27 )
custom_styles/slider = SubResource( 34 )
custom_styles/grabber_area_highlight = SubResource( 35 )
custom_styles/grabber_area = SubResource( 36 )
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="options"]
margin_left = 459.0
margin_top = 430.0
margin_right = 852.0
margin_bottom = 494.0
theme = SubResource( 26 )
text = "MASTER VOLUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goback" type="Button" parent="options"]
margin_left = 266.0
margin_top = 358.0
margin_right = 518.0
margin_bottom = 430.0
theme = SubResource( 33 )
text = "Go Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="value_changed" from="options/VolumeSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="options/goback" to="." method="_on_goback_pressed"]
